# GeeCodeX

./: .gitignore  README.md  pubspec.yaml  versions.md
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/books_qwq/: MainActivity.kt
android/app/src/main/res/xml/: network_security_config.xml
docs/android/: proj_structure_zh.md
lib/: add_lib.dart  main.dart  native_bindings.dart
lib/constants/: app_colors.dart  app_misc.dart  app_text_styles.dart  index.dart
lib/l10n/: app_en.arb  app_localization.dart  app_localization_en.dart  app_localization_zh.dart  app_zh.arb
lib/models/: book.dart  favorite_item.dart  index.dart
lib/native/: index.dart  native_bindings.dart  native_wrapper.dart  platform_specific.dart
lib/pages/: home_page.dart
lib/screens/: book_reader_screen.dart  favorite_screen.dart  home_screen.dart  noter_screen.dart  screen_framework.dart  splash_screen.dart
lib/screens/book_browser/: book_browser_screen.dart  index.dart
lib/screens/book_browser/widgets/: featured_books_section.dart  index.dart  reading_stats_card.dart  recently_reading_header.dart  recently_reading_list.dart  search_bar_widget.dart  section_title_widget.dart
lib/screens/book_details/: book_details_screen.dart
lib/screens/book_favorites/: favorite_screen.dart
lib/screens/book_notes/: book_notes_screen.dart  index.dart
lib/screens/book_reader/: book_reader_screen.dart  index.dart  pdf_details_screen.dart  test_http_screen.dart
lib/screens/book_reader/widgets/: add_note_dialog.dart  index.dart  initial_reader_view.dart  pdf_viewer_wrapper.dart  reader_app_bar.dart  reader_menu_button.dart  reader_tools_menu.dart  search_bar_content.dart  text_selection_menu_items.dart
lib/screens/feedback/: feedback_screen.dart
lib/screens/profile/: profile_screen.dart
lib/screens/reading_heatmap/: reading_heatmap_screen.dart
lib/services/: favorite_service.dart  note_service.dart  reading_time_service.dart  recent_reading_service.dart
lib/widgets/: book_card.dart  book_reader_builder.dart  bottom_nav.dart  index.dart
native/: .clang-tidy  .clangd  CMakeLists.txt  build.sh
native/cmake/: PrettyPrint.cmake
native/cpp/: CMakeLists.txt  add.h  build.sh  install.sh
native/examples/: CMakeLists.txt  ex_add.cpp
native/include/add/: add.h  config.h
native/include/common/: config.h  logger.hpp
native/include/ocr/: ort_inf.hpp  transform.h
native/scripts/: build.sh  common_color.sh  common_ndk.sh  install.sh
native/src/: CMakeLists.txt
native/src/add/: add.cpp
native/src/internal/: utils.h
native/src/ocr/: transform.cpp
native/tests/: CMakeLists.txt  test_add.cpp  test_helper.cpp  test_logger.cpp  test_main.cpp  test_ocr.cpp
native/tests/include/: test_helper.h
release_tools/: geecodex_releaser.py  requirements.txt
test/: widget_test.dart
